# SteamJailer

./: BUILD.md  CMakeLists.txt  COMPATIBILITY.md  FreeBSD.hpp  INSTALL_PROCESS.md  Makefile  README.md  build.sh  destroy_jail.sh  destroy_steamjailer.sh  ezjail.conf  freebsd_commands.txt  gui_sequence.txt  include_jail_manager.hpp  initialization_sequence.txt  install.sh  install_packages.sh  iocage_installer.cpp  iocage_installer.hpp  jail_manager.cpp  jail_manager.hpp  jail_setup_sequence.txt  list  main.cpp  management_sequence.txt  packages.json  project_structure.txt  steam_jail_launcher.cpp  steam_jailer.cpp  steam_jailer_install.sh  steam_jailer_launcher.cpp  steam_jailer_setup.sh  steam_launcher.cpp  steam_setup.sh  steamjailer.sh  steamjailer_console.sh  steamjailer_gui.sh  steamjailer_installer.cpp  steamjailer_log.sh  test_steam_install.sh  (+1 more)
config/: jailautomation.newsyslog.conf
include/: FreeBSD.hpp  config_manager.hpp  pkg_checker.hpp  system_info.hpp
scripts/: build.sh  jail_setup.sh  setup_logging.sh  version_check.sh  wine_setup.sh
src/: config.hpp.in  config_manager.cpp  example_usage.cpp  jail_manager.cpp  jail_manager.hpp  jail_setup.cpp  logger.cpp  logger.hpp  main.cpp  network_checker.cpp  network_checker.hpp  pkg_checker.cpp  src_wine_installer.cpp  wine_installer.hpp
src/gui/: zenity_gui.cpp  zenity_gui.hpp
